--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -39,7 +39,7 @@ jobs:
           version: 0.13.0
 
       - name: Build
-        run: zig build -Drelease-fast -Dtarget=${{ matrix.TARGET }}
+        run: zig build -DReleaseFast -Dtarget=${{ matrix.TARGET }}
 
       - name: Upload the binary
         uses: svenstaro/upload-release-action@v2
