--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -40,7 +40,7 @@ jobs:
           version: 0.13.0
 
       - name: Build
-        run: zig build -DReleaseFast -Dtarget=${{ matrix.TARGET }}
+        run: zig build -Doptimize=ReleaseFast -Dtarget=${{ matrix.TARGET }}
 
       - name: Upload the binary
         uses: svenstaro/upload-release-action@v2
