--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -26,7 +26,7 @@ jobs:
             aarch64-windows,
             arm-linux,
             riscv64-linux,
-            i386-linux,
+            x86-linux,
           ]
     steps:
       - name: Checkout the repository
